--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -73,7 +73,7 @@
   }
 }
 
-/* ---------- tablet ---------- */
+/*  tablet  */
 
 @media screen and (min-width: $BPointTabletStart) and (max-width: $BPointtTabletEnd) {
   .all-links {
@@ -103,7 +103,7 @@
   }
 }
 
-/* ---------- deskop ---------- */
+/*  deskop  */
 
 @media screen and (min-width: $BPointDesktopStart) {
   .header {
