--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -9,6 +9,8 @@
     list-style-type: none;
     display: flex;
     gap: 30px;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 
   &__shadow {
