--- a/sass/components/_lorem.scss
+++ b/sass/components/_lorem.scss
@@ -1,8 +1,10 @@
 .lorem {
-  
   &__ul {
     list-style-type: none;
     display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
   }
 
   &__lorem {
@@ -18,7 +20,7 @@
     color: $color-description;
     margin-bottom: 10px;
     text-transform: uppercase;
-   
+
     &--small {
       font-weight: 400;
       font-size: 14px;
