--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -21,6 +21,7 @@ $color-SkillsWeDo: rgba(47, 48, 58, 0.8);
 $transitionDurationDefault: 250ms;
 $transitionTimingDefault: cubic-bezier(0.4, 0, 0.2, 1);
 
+$BPointPhoneStart: 100px;
 $BPointPhoneEnd: 767px;
 $BPointTabletStart: 768px;
 $BPointtTabletEnd: 1199px;
