--- a/sass/components/_lorem.scss
+++ b/sass/components/_lorem.scss
@@ -2,9 +2,28 @@
   &__ul {
     list-style-type: none;
     display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+
+  &__li {
+    list-style-type: none;
+    display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+    flex-direction: column;
+    text-align: left;
+    padding-left: 15px;
+    padding-right: 15px;
+    
+  }
+
+  @media screen and (min-width: $BPointDesktopStart) {
+    .lorem__li {
+      flex-wrap: nowrap;
+      flex-direction: row;
+    }
   }
 
   &__lorem {
@@ -12,7 +31,7 @@
     margin-bottom: 30px;
   }
 
-  &_description {
+  &__description {
     font-weight: 700;
     font-size: 14px;
     line-height: 1.17;
