--- a/sass/components/_lorem.scss
+++ b/sass/components/_lorem.scss
@@ -58,6 +58,7 @@
       line-height: 1.7;
       letter-spacing: 0, 3em;
       color: $color-color-description-small-letters;
+      max-width: 270px;
     }
   }
 }
