--- a/sass/components/_lorem.scss
+++ b/sass/components/_lorem.scss
@@ -23,8 +23,8 @@
     }
 
     .lorem__lorem {
+      width: 100%;
       max-width: 354px;
-      max-height: 120px;
     }
   }
 
@@ -35,6 +35,7 @@
 
     .lorem__li {
       flex-wrap: nowrap;
+      max-width: 270px;
     }
   }
 
@@ -58,7 +59,6 @@
       line-height: 1.7;
       letter-spacing: 0, 3em;
       color: $color-color-description-small-letters;
-      max-width: 270px;
     }
   }
 }
