--- a/sass/components/_lorem.scss
+++ b/sass/components/_lorem.scss
@@ -17,6 +17,11 @@
     padding-right: 15px;
   }
 
+  &__lorem {
+    max-width: 100%;
+    margin-bottom: 30px;
+  }
+
   @media screen and (min-width: $BPointTabletStart) {
     .lorem__li {
       flex-basis: calc((100% - 2rem) / 2);
@@ -37,11 +42,11 @@
       flex-wrap: nowrap;
       max-width: 270px;
     }
-  }
 
-  &__lorem {
-    max-width: 270px;
-    margin-bottom: 30px;
+    .lorem__lorem {
+      width: 100%;
+      max-width: 354px;
+    }
   }
 
   &__description {
