--- a/sass/components/_lorem.scss
+++ b/sass/components/_lorem.scss
@@ -15,10 +15,13 @@
     text-align: left;
     padding-left: 15px;
     padding-right: 15px;
+    height: 600px;
   }
 
   &__lorem {
     max-width: 100%;
+    width: 100%;
+    height: 100%;
     margin-bottom: 30px;
   }
 
@@ -28,24 +31,26 @@
     }
 
     .lorem__lorem {
+      max-width: 100%;
       width: 100%;
-      max-width: 354px;
+      height: 100%;
     }
   }
 
   @media screen and (min-width: $BPointDesktopStart) {
     .lorem__ul {
       flex-wrap: nowrap;
+      gap: 0;
     }
 
     .lorem__li {
       flex-wrap: nowrap;
-      max-width: 270px;
+      max-width: none;
     }
 
     .lorem__lorem {
       width: 100%;
-      max-width: 354px;
+      max-width: none;
     }
   }
 
