--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -120,6 +120,54 @@
 }
 
 @media screen and (min-width: $BPointPhoneStart) {
+  .footer__logo-all {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .logo__studio--white {
+    margin: 0;
+  }
+
+  .footer__under-logo {
+    text-align: center;
+  }
+
+  .logo__web {
+    padding-left: 0;
+  }
+
+  .footer__second-half {
+    margin-top: 60px;
+  }
+
+  .footer__h2 {
+    text-align: center;
+    padding-bottom: 20px;
+  }
+
+  .footer__flex {
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+
+  .footer__newsletter {
+    margin-top: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-left: 0;
+  }
+
+  .footer__div-button {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+  }
 }
 
 @media screen and (min-width: $BPointTabletStart) {
@@ -151,14 +199,6 @@
     flex-direction: row;
     justify-content: space-around;
     flex-wrap: wrap;
-  }
-
-  .footer__newsletter {
-    margin-top: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
   }
 
   .footer__newsletter {
