--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -119,7 +119,14 @@
   }
 }
 
-@media screen and (min-width: $BPointPhoneStart) {
+@media screen and (min-width: $BPointPhoneStart) and (max-width: $BPointPhoneEnd) {
+  .footer {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-content: center;
+  }
+
   .footer__logo-all {
     display: flex;
     align-items: center;
@@ -170,7 +177,7 @@
   }
 }
 
-@media screen and (min-width: $BPointTabletStart) {
+@media screen and (min-width: $BPointTabletStart) and (max-width: $BPointtTabletEnd) {
   .footer__logo-all {
     display: flex;
     align-items: center;
@@ -188,6 +195,10 @@
 
   .logo__web {
     padding-left: 0;
+  }
+
+  .footer__second-half {
+    margin: 0;
   }
 
   .footer__h2 {
