button w jednej linii w footer

--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -117,6 +117,10 @@
     display: inline-block;
     margin-bottom: 20px;
   }
+
+  &__div-button {
+    display: inline-block;
+  }
 }
 
 @media screen and (min-width: $BPointPhoneStart) and (max-width: $BPointPhoneEnd) {
