--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -166,7 +166,7 @@
     padding-bottom: 20px;
   }
 
-  .social-div-footer {
+  .footer__social-div-footer {
     display: flex;
     justify-content: center;
     width: 100%;
