--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -55,6 +55,10 @@
     gap: 5px;
   }
 
+  &__li-fig {
+    width: 100%;
+  }
+
   &__icons {
     display: flex;
     justify-content: center;
@@ -72,5 +76,33 @@
     background-color: $color-mainBlue;
     border-radius: 50%;
     cursor: pointer;
+  }
+  
+}
+
+@media screen and (min-width: $BPointTabletStart) and (max-width: $BPointtTabletEnd) {
+  .team__ull {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 30px;
+  }
+
+  .team__li-fig {
+    flex-basis: calc((100% - 30px) / 2);
+  }
+}
+
+@media screen and (min-width: $BPointPhoneStart) and (max-width: $BPointPhoneEnd) {
+  .team__ull {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .team__shadow {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
   }
 }
