--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -77,7 +77,6 @@
     border-radius: 50%;
     cursor: pointer;
   }
-  
 }
 
 @media screen and (min-width: $BPointTabletStart) and (max-width: $BPointtTabletEnd) {
@@ -89,7 +88,15 @@
   }
 
   .team__li-fig {
+    max-width: 100%;
+    width: 100%;
+    height: 100%;
     flex-basis: calc((100% - 30px) / 2);
+  }
+  .team__img {
+    max-width: 100%;
+    width: 100%;
+    height: 100%;
   }
 }
 
@@ -103,6 +110,18 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+  }
+
+  .team__img {
+    max-width: 100%;
     width: 100%;
+    height: 100%;
+  }
+
+  .team__li-fig {
+    max-width: 100%;
+    width: 100%;
+    height: 100%;
   }
 }
