team mobile i tablet ok

--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -103,7 +103,7 @@
 @media screen and (min-width: $BPointPhoneStart) and (max-width: $BPointPhoneEnd) {
   .team__ull {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
   }
   .team__shadow {
@@ -120,6 +120,12 @@
   }
 
   .team__li-fig {
+    max-width: 100%;
+    width: 100%;
+    height: 100%;
+  }
+
+  .team__figcap {
     max-width: 100%;
     width: 100%;
     height: 100%;
