--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -110,6 +110,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    max-width: 100%;
+    width: 100%;
+    height: 100%;
   }
 
   .team__img {
