--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -110,9 +110,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 100%;
-    width: 100%;
-    height: 100%;
+    max-width: 270px;
   }
 
   .team__img {
@@ -125,6 +123,8 @@
     max-width: 100%;
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: center;
   }
 
   .team__figcap {
