--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -91,14 +91,12 @@
     width: 100%;
     height: 100%;
     flex-basis: calc((100% - 30px) / 2);
-    
   }
   .team__img {
     max-width: 100%;
     width: 100%;
     height: 100%;
   }
- 
 }
 
 @media screen and (min-width: $BPointPhoneStart) and (max-width: $BPointPhoneEnd) {
@@ -112,28 +110,20 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+    max-width: 270px;
   }
 
   .team__li-fig {
     max-width: 100%;
     width: 100%;
-    height: auto;
+    height: 100%;
     display: flex;
     justify-content: center;
-    
   }
 
   .team__figcap {
     max-width: 100%;
     width: 100%;
     height: 100%;
-  }
-
-  .team__img {
-    max-width: 100%;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
   }
 }
