--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -110,7 +110,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 270px;
+    max-width: 100%;
+    width: 100%;
+    height: 100%;
   }
 
   .team__img {
@@ -123,8 +125,6 @@
     max-width: 100%;
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: center;
   }
 
   .team__figcap {
