footer poprawiony input przy 380

--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -192,6 +192,10 @@
     display: flex;
     justify-content: center;
   }
+
+  .footer__input {
+    max-width: calc(97%);
+  }
 }
 
 @media screen and (min-width: $BPointTabletStart) and (max-width: $BPointtTabletEnd) {
