--- a/sass/components/_headlamp.scss
+++ b/sass/components/_headlamp.scss
@@ -1,6 +1,6 @@
 .headlamp {
   max-width: 1600px;
-  background-image: url("../images/banners/banner-pc.jpg"),
+  background-image: url("../images/banners/bannerPC.jpg"),
     linear-gradient(90deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 0%);
   background-size: 1600px;
   background-position: center;
@@ -10,7 +10,7 @@
   margin: 0 auto;
 
   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-    background-image: url("../images/banners/banner-pc@2x.png");
+    background-image: url("../images/banners/bannerPC@2x.png");
   }
 
   &__description-h1 {
@@ -51,27 +51,27 @@
 
 .headlamp {
   @media (min-width: $BPointPhoneStart) {
-    background-image: url("../images/mobile/bannerMobile.png");
+    background-image: url("../images/banners/bannerMobile.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
   }
   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-    background-image: url("../images/mobile/bannerMobile@2x.png");
+    background-image: url("../images/banners/bannerMobile2@x.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
   }
 
   @media (min-width: $BPointTabletStart) {
-    background-image: url("../images/tablet/bannerTablet.png");
+    background-image: url("../images/banners/bannerTablet.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
   }
 
   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-    background-image: url("../images/tablet/bannerTablet@2x.png");
+    background-image: url("../images/banners/bannerTablet@2x.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
