poprawione zdjecia head lamp

--- a/sass/components/_headlamp.scss
+++ b/sass/components/_headlamp.scss
@@ -8,6 +8,7 @@
   color: $color-mainWhite;
   text-align: center;
   margin: 0 auto;
+  object-fit: cover;
 
   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
     background-image: url("../images/banners/bannerPC@2x.png");
@@ -55,12 +56,14 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    object-fit: cover;
   }
   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
     background-image: url("../images/banners/bannerMobile2@x.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    object-fit: cover;
   }
 
   @media (min-width: $BPointTabletStart) {
@@ -68,6 +71,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    object-fit: cover;
   }
 
   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
@@ -75,5 +79,6 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    object-fit: cover;
   }
 }
